FusionDev Backup1/src/objects/Credit_Card_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Allow_Multiple_Cards__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Multiple Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orbital_Gateway_Merchant_Id__c</fullName>
        <label>Orbital Gateway Merchant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orbital_Gateway_Password__c</fullName>
        <description>Must be between 8–32 characters.
Must contain at least 1 number.
Must contain only standard English letters or digits (a-z, A-Z, 0-9). Cannot contain embedded spaces.</description>
        <inlineHelpText>Must be between 8–32 characters.
Must contain at least 1 number.
Must contain only standard English letters or digits (a-z, A-Z, 0-9). Cannot contain embedded spaces.</inlineHelpText>
        <label>Orbital Gateway Password</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orbital_Gateway_Username__c</fullName>
        <description>Must be between 8–32 characters.
Must contain at least 1 number.
Must contain only standard English letters or digits (a-z, A-Z, 0-9). Cannot contain embedded spaces.</description>
        <inlineHelpText>Must be between 8–32 characters.
Must contain at least 1 number.
Must contain only standard English letters or digits (a-z, A-Z, 0-9). Cannot contain embedded spaces.</inlineHelpText>
        <label>Orbital Gateway Username</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Card Settings</label>
</CustomObject>